src/workLogExpressionParser/WorkLogEntryGrammar.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */
import moment from 'moment';

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { WorkLogEntry: peg$parseWorkLogEntry },
      peg$startRuleFunction  = peg$parseWorkLogEntry,

      peg$c0 = function(workload, projectAndDate) {
                  return resultMergedFrom(workload, projectAndDate);
              },
      peg$c1 = function(project, workloadAndDate) {
                  return resultMergedFrom(project, workloadAndDate);
              },
      peg$c2 = function(date, workloadAndProject) {
                  return resultMergedFrom(workloadAndProject, date);
              },
      peg$c3 = function(projectAndDate) {
                  return resultMergedFrom(projectAndDate, {
                      workload: "1d"
                  });
              },
      peg$c4 = function(workloadAndProject) {
                  return resultMergedFrom(workloadAndProject, {
                      day: now().format(dateFormat)
                  });
              },
      peg$c5 = function(project) {
                  return resultMergedFrom(project, {
                      workload: "1d",
                      day: now().format(dateFormat)
                  });
              },
      peg$c6 = function(workload, date) {
                  return resultMergedFrom(workload, date);
              },
      peg$c7 = function(date, workload) {
                  return resultMergedFrom(workload, date);
              },
      peg$c8 = function(project, date) {
                  return resultMergedFrom(project, date);
              },
      peg$c9 = function(date, project) {
                  return resultMergedFrom(project, date);
              },
      peg$c10 = function(workload, project) {
                  return resultMergedFrom(workload, project);
              },
      peg$c11 = function(project, workload) {
                  return resultMergedFrom(workload, project);
              },
      peg$c12 = function(workload) { return { workload: workload }; },
      peg$c13 = function(days, hours) { return days + " " + hours; },
      peg$c14 = function(days, minutes) { return days + " " + minutes; },
      peg$c15 = function(hours, minutes) { return hours + " " + minutes; },
      peg$c16 = "d",
      peg$c17 = peg$literalExpectation("d", false),
      peg$c18 = "h",
      peg$c19 = peg$literalExpectation("h", false),
      peg$c20 = "m",
      peg$c21 = peg$literalExpectation("m", false),
      peg$c22 = function(projectNames) { return {projectNames: projectNames}; },
      peg$c23 = "#",
      peg$c24 = peg$literalExpectation("#", false),
      peg$c25 = function(projectName) { return projectName; },
      peg$c26 = "@",
      peg$c27 = peg$literalExpectation("@", false),
      peg$c28 = function(date) { return {day: date}; },
      peg$c29 = function(dayOfWeek) {
                  return isToday(dayOfWeek)
                      ? now().format(dateFormat)
                      : dateOfPrevious(dayOfWeek).format(dateFormat);
              },
      peg$c30 = "last-",
      peg$c31 = peg$literalExpectation("last-", false),
      peg$c32 = function(dayOfWeek) {
                  return dateOfPrevious(dayOfWeek).format(dateFormat);
              },
      peg$c33 = "next-",
      peg$c34 = peg$literalExpectation("next-", false),
      peg$c35 = function(dayOfWeek) {
                  return dateOfNext(dayOfWeek).format(dateFormat);
              },
      peg$c36 = function(date) {
                  if (moment(date, dateFormat).isValid()) {
                      return moment(date, dateFormat).format(dateFormat);
                  } else {
                      error("Not a valid date");
                  }
              },
      peg$c37 = function(relativeDay) {
                  relativeDay = relativeDay.toLowerCase();
                  var relativeDayDate = now();
                  if (relativeDay === "yesterday") {
                      relativeDayDate.subtract(1, 'days');
                  } else if (relativeDay === "tomorrow") {
                      relativeDayDate.add(1, 'days');
                  }
                  return relativeDayDate.format(dateFormat);
              },
      peg$c38 = /^[Mm]/,
      peg$c39 = peg$classExpectation(["M", "m"], false, false),
      peg$c40 = "onday",
      peg$c41 = peg$literalExpectation("onday", false),
      peg$c42 = /^[Tt]/,
      peg$c43 = peg$classExpectation(["T", "t"], false, false),
      peg$c44 = "uesday",
      peg$c45 = peg$literalExpectation("uesday", false),
      peg$c46 = /^[Ww]/,
      peg$c47 = peg$classExpectation(["W", "w"], false, false),
      peg$c48 = "ednesday",
      peg$c49 = peg$literalExpectation("ednesday", false),
      peg$c50 = "hursday",
      peg$c51 = peg$literalExpectation("hursday", false),
      peg$c52 = /^[Ff]/,
      peg$c53 = peg$classExpectation(["F", "f"], false, false),
      peg$c54 = "riday",
      peg$c55 = peg$literalExpectation("riday", false),
      peg$c56 = /^[Ss]/,
      peg$c57 = peg$classExpectation(["S", "s"], false, false),
      peg$c58 = "aturday",
      peg$c59 = peg$literalExpectation("aturday", false),
      peg$c60 = "unday",
      peg$c61 = peg$literalExpectation("unday", false),
      peg$c62 = "/",
      peg$c63 = peg$literalExpectation("/", false),
      peg$c64 = /^[01]/,
      peg$c65 = peg$classExpectation(["0", "1"], false, false),
      peg$c66 = /^[0-3]/,
      peg$c67 = peg$classExpectation([["0", "3"]], false, false),
      peg$c68 = /^[Yy]/,
      peg$c69 = peg$classExpectation(["Y", "y"], false, false),
      peg$c70 = "esterday",
      peg$c71 = peg$literalExpectation("esterday", false),
      peg$c72 = "oday",
      peg$c73 = peg$literalExpectation("oday", false),
      peg$c74 = "omorrow",
      peg$c75 = peg$literalExpectation("omorrow", false),
      peg$c76 = "t",
      peg$c77 = peg$literalExpectation("t", false),
      peg$c78 = /^[+\-]/,
      peg$c79 = peg$classExpectation(["+", "-"], false, false),
      peg$c80 = function(offsetSign, offset) {
                  var daysToAdd = offsetSign + offset;
                  return now().add('days', daysToAdd).format(dateFormat)
              },
      peg$c81 = " ",
      peg$c82 = peg$literalExpectation(" ", false),
      peg$c83 = /^[^ ]/,
      peg$c84 = peg$classExpectation([" "], true, false),
      peg$c85 = /^[0-9]/,
      peg$c86 = peg$classExpectation([["0", "9"]], false, false),
      peg$c87 = /^[1-9]/,
      peg$c88 = peg$classExpectation([["1", "9"]], false, false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseWorkLogEntry() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseWorkloadClause();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseSPACE();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseProjectAndDateClauses();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c0(s1, s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseProjectsClause();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseSPACE();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseWorkloadAndDateClauses();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c1(s1, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseDateClause();
        if (s1 !== peg$FAILED) {
          s2 = peg$parseSPACE();
          if (s2 !== peg$FAILED) {
            s3 = peg$parseWorkloadAndProjectClauses();
            if (s3 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c2(s1, s3);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parseProjectAndDateClauses();
          if (s1 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c3(s1);
          }
          s0 = s1;
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            s1 = peg$parseWorkloadAndProjectClauses();
            if (s1 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c4(s1);
            }
            s0 = s1;
            if (s0 === peg$FAILED) {
              s0 = peg$currPos;
              s1 = peg$parseProjectsClause();
              if (s1 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c5(s1);
              }
              s0 = s1;
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseWorkloadAndDateClauses() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseWorkloadClause();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseSPACE();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseDateClause();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c6(s1, s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseDateClause();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseSPACE();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseWorkloadClause();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c7(s1, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parseProjectAndDateClauses() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseProjectsClause();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseSPACE();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseDateClause();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c8(s1, s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseDateClause();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseSPACE();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseProjectsClause();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c9(s1, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parseWorkloadAndProjectClauses() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseWorkloadClause();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseSPACE();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseProjectsClause();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c10(s1, s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseProjectsClause();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseSPACE();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseWorkloadClause();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c11(s1, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parseWorkloadClause() {
    var s0, s1;

    s0 = peg$currPos;
    s1 = peg$parseWorkloadInDays();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c12(s1);
    }
    s0 = s1;
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseWorkloadInHours();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c12(s1);
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseMinutes();
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c12(s1);
        }
        s0 = s1;
      }
    }

    return s0;
  }

  function peg$parseWorkloadInDays() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseDays();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseSPACE_OPT();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseWorkloadInHours();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c13(s1, s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseDays();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseSPACE_OPT();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseMinutes();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c14(s1, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$parseDays();
      }
    }

    return s0;
  }

  function peg$parseWorkloadInHours() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseHours();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseSPACE_OPT();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseMinutes();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c15(s1, s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parseHours();
    }

    return s0;
  }

  function peg$parseDays() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$currPos;
    s2 = peg$parseNUMBER();
    if (s2 !== peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 100) {
        s3 = peg$c16;
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c17); }
      }
      if (s3 !== peg$FAILED) {
        s2 = [s2, s3];
        s1 = s2;
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
    } else {
      peg$currPos = s1;
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      s0 = input.substring(s0, peg$currPos);
    } else {
      s0 = s1;
    }

    return s0;
  }

  function peg$parseHours() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$currPos;
    s2 = peg$parseNUMBER();
    if (s2 !== peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 104) {
        s3 = peg$c18;
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c19); }
      }
      if (s3 !== peg$FAILED) {
        s2 = [s2, s3];
        s1 = s2;
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
    } else {
      peg$currPos = s1;
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      s0 = input.substring(s0, peg$currPos);
    } else {
      s0 = s1;
    }

    return s0;
  }

  function peg$parseMinutes() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$currPos;
    s2 = peg$parseNUMBER();
    if (s2 !== peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 109) {
        s3 = peg$c20;
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c21); }
      }
      if (s3 !== peg$FAILED) {
        s2 = [s2, s3];
        s1 = s2;
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
    } else {
      peg$currPos = s1;
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      s0 = input.substring(s0, peg$currPos);
    } else {
      s0 = s1;
    }

    return s0;
  }

  function peg$parseProjectsClause() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseProjectClause();
    if (s2 !== peg$FAILED) {
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parseProjectClause();
      }
    } else {
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c22(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseProjectClause() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseSPACE_OPT();
    if (s1 !== peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 35) {
        s2 = peg$c23;
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c24); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseWORD();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c25(s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseDateClause() {
    var s0, s1, s2;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 64) {
      s1 = peg$c26;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c27); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseDateDefinition();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c28(s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseDateDefinition() {
    var s0, s1, s2;
